--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
+        <link rel="stylesheet" href="bower_components/jqueryui/themes/base/jquery-ui.css">
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
         <script src="bower_components/modernizr/modernizr.js"></script>
@@ -31,15 +32,16 @@
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/jquery.js"></script>
-        <script src="bower_components/threejs/build/three.min.js"></script>
+        <script src="bower_components/jqueryui/ui/minified/jquery-ui.min.js"></script>
+        <script src="bower_components/threejs/build/three.js"></script>
         <script src="scripts/utils/Detector.js"></script>
         <script src="scripts/utils/OrbitControls.js"></script>
         <script src="scripts/utils/Stats.js"></script>
         <script src="scripts/utils/csg.js"></script>
         <script src="scripts/utils/ThreeCSG.js"></script>
-        <script src="bower_components/threejs/build/THREEx.KeyboardState.js"></script>
-        <script src="bower_components/threejs/build/THREEx.FullScreen.js"></script>
-        <script src="bower_components/threejs/build/THREEx.WindowResize.js"></script>
+        <script src="scripts/utils/THREEx.KeyboardState.js"></script>
+        <script src="scripts/utils/THREEx.FullScreen.js"></script>
+        <script src="scripts/utils/THREEx.WindowResize.js"></script>
 
         <!--FONT-->
         <script src="scripts/utils/helvetiker_bold.typeface.js"></script>
