--- a/app/index.html
+++ b/app/index.html
@@ -10,10 +10,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <!-- build:css styles/vendor.css -->
-        <!-- bower:css -->
-        <!-- endbower -->
-        <!-- endbuild -->
+        <!-- _build_:css styles/vendor.css -->
+        <!-- _bower_:css -->
+        <!-- _endbower_ -->
+        <!-- _endbuild_ -->
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="bower_components/jqueryui/themes/base/jquery-ui.css">
         <link rel="stylesheet" href="styles/main.css">
@@ -34,17 +34,7 @@
         <script src="bower_components/jquery/jquery.js"></script>
         <script src="bower_components/jqueryui/ui/minified/jquery-ui.min.js"></script>
         <script src="bower_components/threejs/build/three.js"></script>
-        <script src="scripts/utils/Detector.js"></script>
-        <script src="scripts/utils/OrbitControls.js"></script>
-        <script src="scripts/utils/Stats.js"></script>
-        <script src="scripts/utils/csg.js"></script>
-        <script src="scripts/utils/ThreeCSG.js"></script>
-        <script src="scripts/utils/THREEx.KeyboardState.js"></script>
-        <script src="scripts/utils/THREEx.FullScreen.js"></script>
-        <script src="scripts/utils/THREEx.WindowResize.js"></script>
-
         <!--FONT-->
-        <script src="scripts/utils/helvetiker_bold.typeface.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -59,6 +49,15 @@
         </script>
 
         <!-- build:js scripts/plugins.js -->
+        <script src="scripts/utils/Detector.js"></script>
+        <script src="scripts/utils/OrbitControls.js"></script>
+        <script src="scripts/utils/Stats.js"></script>
+        <script src="scripts/utils/csg.js"></script>
+        <script src="scripts/utils/ThreeCSG.js"></script>
+        <script src="scripts/utils/THREEx.KeyboardState.js"></script>
+        <script src="scripts/utils/THREEx.FullScreen.js"></script>
+        <script src="scripts/utils/THREEx.WindowResize.js"></script>
+        <script src="scripts/utils/helvetiker_bold.typeface.js"></script>
         <!-- endbuild -->
 
         <!-- build:js scripts/main.js -->
