--- a/app/test.html
+++ b/app/test.html
@@ -1,227 +1,292 @@
-<!doctype html>
-<html>
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <title>three.js webgl - lights - point lights</title>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>test - handsome logo</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <style>
+    body {
+      background-color: #000;
+      margin: 0px;
+      overflow: hidden;
+    }
+
+    #info {
+      position: absolute;
+      top: 0px; width: 100%;
+      color: #ffffff;
+      padding: 5px;
+      font-family: Monospace;
+      font-size: 13px;
+      text-align: center;
+    }
+
+    a {
+      color: #ff0080;
+      text-decoration: none;
+    }
+
+    a:hover {
+      color: #0080ff;
+    }
+
+    #stats { position: absolute; top:0; left: 0 }
+    #stats #fps { background: transparent !important }
+    #stats #fps #fpsText { color: #aaa !important }
+    #stats #fps #fpsGraph { display: none }
+  </style>
 </head>
 <body>
 
-<script src="bower_components/threejs/build/three.js"></script>
+<div id="container"></div>
+<div id="info">
+  <a href="http://threejs.org" target="_blank">three.js</a> - point lights WebGL demo
+</div>
 
-<script id="vertexShader" type="x-shader/x-vertex">
-	varying vec3 vViewPosition;
-	varying vec3 vNormal;
-	varying vec2 vUv;
-	uniform vec4 offsetRepeat;
-	varying vec3 vWorldPosition;
+<script src="bower_components/threejs/build/three.min.js"></script>
 
-	uniform mat4 textureMatrixProj; // for projective texturing
-	varying vec4 texCoordProj; // for projective texturing
+<script src="scripts/utils/TrackballControls.js"></script>
 
-	void main() {
-		vUv = uv * offsetRepeat.zw + offsetRepeat.xy;
-
-		vec3 transformedNormal = normalMatrix * normal;
-		vNormal = normalize( transformedNormal );
-
-		vec4 mvPosition;
-		mvPosition = modelViewMatrix * vec4( position, 1.0 );
-		gl_Position = projectionMatrix * mvPosition;
-
-		vViewPosition = -mvPosition.xyz;
-
-		vec4 worldPosition = modelMatrix * vec4( position, 1.0 );
-		vWorldPosition = worldPosition.xyz;
-
-		texCoordProj = textureMatrixProj * modelMatrix * vec4(position, 1.0);  // for projective texturing
-	} 
-</script>
-
-<script id="fragmentShader" type="x-shader/x-fragment">
-	uniform vec3 diffuse;
-	uniform float opacity;
-	const vec3 ambient = vec3(1.0, 1.0, 1.0);
-	uniform vec3 emissive;
-	uniform vec3 specular;
-	uniform float shininess;
-	varying vec2 vUv;
-	uniform sampler2D map;
-	const vec3 ambientLightColor = vec3(0.25, 0.25, 0.25);
-
-	uniform vec3 spotLightColor[ 1 ];
-	uniform vec3 spotLightPosition[ 1 ];
-	uniform vec3 spotLightDirection[ 1 ];
-	uniform float spotLightAngleCos[ 1 ];
-	uniform float spotLightExponent[ 1 ];
-	uniform float spotLightDistance[ 1 ];
-	varying vec3 vWorldPosition;
-	varying vec3 vViewPosition;
-	varying vec3 vNormal;
-
-	uniform sampler2D mapProj;  // for projective texturing
-	varying vec4 texCoordProj; // for projective texturing
-
-	void main() {
-		gl_FragColor = vec4( vec3 ( 1.0 ), opacity );
-
-		vec4 texelColor = texture2D( map, vUv );
-
-		gl_FragColor = gl_FragColor * texelColor;
-		
-		vec4 texColorProj = texCoordProj.q < 0.0 ? vec4(0.0, 0.0, 0.0, 0.0) : texture2DProj( mapProj, texCoordProj); // for projective texturing
-		float projectorAttenuation = texColorProj.a; // for projective texturing
-
-		float specularStrength = 1.0;
-
-		vec3 normal = normalize( vNormal );
-		vec3 viewPosition = normalize( vViewPosition );
-		vec3 spotDiffuse  = vec3( 0.0 );
-		vec3 spotSpecular = vec3( 0.0 );
-		for ( int i = 0; i < 1; i ++ ) {
-			vec4 lPosition = viewMatrix * vec4( spotLightPosition[ i ], 1.0 );
-			vec3 lVector = lPosition.xyz + vViewPosition.xyz;
-			float lDistance = 1.0;
-			if ( spotLightDistance[ i ] > 0.0 )
-				lDistance = 1.0 - min( ( length( lVector ) / spotLightDistance[ i ] ), 1.0 );
-			lVector = normalize( lVector );
-			float spotEffect = dot( spotLightDirection[ i ], normalize( spotLightPosition[ i ] - vWorldPosition ) );
-			if ( spotEffect > spotLightAngleCos[ i ] ) {
-				spotEffect = max( pow( spotEffect, spotLightExponent[ i ] ), 0.0 );
-				float dotProduct = dot( normal, lVector );
-				float spotDiffuseWeight = max( dotProduct, 0.0 );
-				spotDiffuse += diffuse * spotLightColor[ i ] * spotDiffuseWeight * lDistance * spotEffect * projectorAttenuation; // corrected by the projector attenuation
-				vec3 spotHalfVector = normalize( lVector + viewPosition );
-				float spotDotNormalHalf = max( dot( normal, spotHalfVector ), 0.0 );
-				float spotSpecularWeight = specularStrength * max( pow( spotDotNormalHalf, shininess ), 0.0 );
-				spotSpecular += specular * spotLightColor[ i ] * spotSpecularWeight * spotDiffuseWeight * lDistance * spotEffect * projectorAttenuation; // corrected by the projector attenuation
-			}
-		}
-		vec3 totalDiffuse = vec3( 0.0 );
-		vec3 totalSpecular = vec3( 0.0 );
-		totalDiffuse += spotDiffuse;
-		totalSpecular += spotSpecular;
-		gl_FragColor.xyz = gl_FragColor.xyz * ( emissive + totalDiffuse + ambientLightColor * ambient ) + totalSpecular;
-	}
-</script>
+<script src="scripts/utils/Detector.js"></script>
 
 <script>
 
-	//
-	// Using Projective texturing to modulate spot lights by Popov
-	//
-	// brick textures from here: http://www.graphictivitis.com/index.php/25-amazing-brick-textures/ 
-	// vendetta logo from here: http://www.seeklogo.com/v-for-vendetta-logo-146928.html
+if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 
-	var camera, scene, renderer, light;
-	var uniforms, mesh;
+var camera, scene, renderer, controls,
+    particle1, particle2, particle4, particle4, particle5, particle6,
+    light1, light2, light3, light4, light5, light6;
 
-	var moveLightTarget = false, rotateCube = true;
+var FAR = 300;
 
-	init();
-	animate();
+var clock = new THREE.Clock();
 
-	function init() {
+init();
+animate();
 
-		camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 10000 );
-		camera.position.z = 1000;
+function init() {
 
-		scene = new THREE.Scene();
+  var container = document.getElementById( 'container' );
 
-		light = new THREE.SpotLight( 0xffffff, 3.0, 0.0, false );
-		light.position.set( 0, 300, 1000 );
-		light.target.position.set(0, 0, 0);
-		light.angle = Math.PI/10;
-		light.exponent = 50;
-		scene.add( light );
+  // CAMERA
 
-		scene.updateMatrixWorld();
+  camera = new THREE.PerspectiveCamera( 50, window.innerWidth / window.innerHeight, 1, FAR );
+  camera.position.set( 0, 15, 150 );
+  camera.lookAt( new THREE.Vector3() );
 
-		var texture = THREE.ImageUtils.loadTexture( "images/texture/brick.jpg"/*"texture/grasslight-big.jpg"*/ );
-		var textureProj = THREE.ImageUtils.loadTexture( "images/texture/vendetta-logo.png" );
+  // SCENE
 
-		var shader = THREE.ShaderLib[ "phong" ];
+  scene = new THREE.Scene();
+  scene.fog = new THREE.Fog( 0x040306, 10, FAR );
 
-		uniforms = THREE.UniformsUtils.clone( shader.uniforms);
-		uniforms[ "map" ].value = texture;
-		uniforms[ "specular" ].value = new THREE.Color(0x808080);
-		uniforms[ "shininess" ].value = 2000;
-		uniforms[ "mapProj"] = {
-			"type": "t", "value": textureProj
-		};
-		uniforms[ "textureMatrixProj"] = {
-			"type": "m4", "value": makeProjectiveMatrixForLight(light)
-		};
+  // CONTROLS
 
-		var vertexShader = document.getElementById( 'vertexShader' ).textContent;
-		var fragmentShader = document.getElementById( 'fragmentShader' ).textContent;
+  var fly = false;
 
-		var parameters = {
-			fragmentShader: fragmentShader,
-			vertexShader: vertexShader,
-			uniforms: uniforms,
-			lights: true
-		};
+  if ( !fly ) {
 
-		mesh = new THREE.Mesh( new THREE.CubeGeometry( 1000,600,600, 1, 1, 1 ), new THREE.ShaderMaterial( parameters ) );
+    controls = new THREE.TrackballControls( camera );
+    controls.target.set( 0, 0, 0 );
 
-		scene.add( mesh );
+    controls.rotateSpeed = 1.0;
+    controls.zoomSpeed = 1.2;
+    controls.panSpeed = 0.8;
 
-		renderer = new THREE.WebGLRenderer();
-		renderer.setSize( window.innerWidth, window.innerHeight );
+    controls.noZoom = false;
+    controls.noPan = false;
 
-		document.body.appendChild( renderer.domElement );
+    controls.staticMoving = false;
+    controls.dynamicDampingFactor = 0.15;
 
-		animate.angle = 0.0;
-	}
+    controls.keys = [ 65, 83, 68 ];
 
-	function makeProjectiveMatrixForLight(l) {
-		var lightCamera = new THREE.PerspectiveCamera( 2*l.angle*180/Math.PI, 1.0, 1, 1000 );
-		var lightMatrix = new THREE.Matrix4();
-		var targetPosition = new THREE.Vector3();
+  } else {
 
-		lightCamera.position.getPositionFromMatrix( l.matrixWorld );
-		targetPosition.getPositionFromMatrix( l.target.matrixWorld );
-		lightCamera.lookAt( targetPosition );
-		lightCamera.updateMatrixWorld();
+    controls = new THREE.FirstPersonControls( camera );
 
-		lightCamera.matrixWorldInverse.getInverse( lightCamera.matrixWorld );
+    controls.movementSpeed = 25;
+    controls.lookSpeed = 0.05;
+    controls.lookVertical = true;
 
-		lightMatrix.set( 0.5, 0.0, 0.0, 0.5,
-						  0.0, 0.5, 0.0, 0.5,
-						  0.0, 0.0, 0.5, 0.5,
-						  0.0, 0.0, 0.0, 1.0 );
+    controls.lon = -90;
 
-		lightMatrix.multiply( lightCamera.projectionMatrix );
-		lightMatrix.multiply( lightCamera.matrixWorldInverse );
+  }
 
-		return lightMatrix;
-	}
 
-	function animate() {
+  // TEXTURES
 
-		requestAnimationFrame( animate );
+  var texture = THREE.ImageUtils.loadTexture( "images/textures/disturb.jpg" );
+  texture.repeat.set( 20, 10 );
+  texture.wrapS = texture.wrapT = THREE.RepeatWrapping;
+  texture.format = THREE.RGBFormat;
 
-		if (moveLightTarget) {
-			animate.angle += 0.01;
-			light.target.position.x = 250*Math.cos(animate.angle);
-			light.target.position.y = 100*Math.sin(animate.angle);
+  var texture2 = THREE.ImageUtils.loadTexture( "images/textures/moon_1024.jpg" );
+  texture2.repeat.set( 2, 1 );
+  texture2.wrapS = texture2.wrapT = THREE.RepeatWrapping;
+  texture2.format = THREE.RGBFormat;
 
-			uniforms.textureMatrixProj.value = makeProjectiveMatrixForLight(light);
-		}
+  // MATERIALS
 
-		if (rotateCube) {
-			mesh.rotation.y += 0.003;
-			mesh.rotation.x += 0.004;
-		}
+  var groundMaterial = new THREE.MeshPhongMaterial( { color: 0xffffff, ambient: 0x444444, map: texture } );
+  var objectMaterial = new THREE.MeshPhongMaterial( { color: 0x000000, ambient: 0x111111, specular: 0xffffff, metal: true, map: texture2 } );
 
-		renderer.render( scene, camera );
+  // GROUND
 
-	}
+  var mesh = new THREE.Mesh( new THREE.PlaneGeometry( 800, 400, 2, 2 ), groundMaterial );
+  mesh.position.y = -5;
+  mesh.rotation.x = - Math.PI / 2;
+  scene.add( mesh );
+
+  // OBJECTS
+
+  //var objectGeometry = new THREE.CubeGeometry( 0.5, 1, 1 );
+  //var objectGeometry = new THREE.SphereGeometry( 1.5, 16, 8 );
+  var objectGeometry = new THREE.TorusGeometry( 1.5, 0.4, 8, 16 );
+
+  for ( var i = 0; i < 5000; i ++ ) {
+
+    var mesh = new THREE.Mesh( objectGeometry, objectMaterial );
+
+    mesh.position.x = 400 * ( 0.5 - Math.random() );
+    mesh.position.y = 50 * ( 0.5 - Math.random() ) + 25;
+    mesh.position.z = 200 * ( 0.5 - Math.random() );
+
+    mesh.rotation.y = 3.14 * ( 0.5 - Math.random() );
+    mesh.rotation.x = 3.14 * ( 0.5 - Math.random() );
+
+    mesh.matrixAutoUpdate = false;
+    mesh.updateMatrix();
+    scene.add( mesh );
+
+  }
+
+  // LIGHTS
+
+  scene.add( new THREE.AmbientLight( 0x111111 ) );
+
+  var intensity = 2.5;
+  var distance = 100;
+  var c1 = 0xff0040, c2 = 0x0040ff, c3 = 0x80ff80, c4 = 0xffaa00, c5 = 0x00ffaa, c6 = 0xff1100;
+  //var c1 = 0xffffff, c2 = 0xffffff, c3 = 0xffffff, c4 = 0xffffff, c5 = 0xffffff, c6 = 0xffffff;
+
+  light1 = new THREE.PointLight( c1, intensity, distance );
+  scene.add( light1 );
+
+  light2 = new THREE.PointLight( c2, intensity, distance );
+  scene.add( light2 );
+
+  light3 = new THREE.PointLight( c3, intensity, distance );
+  scene.add( light3 );
+
+  light4 = new THREE.PointLight( c4, intensity, distance );
+  scene.add( light4 );
+
+  light5 = new THREE.PointLight( c5, intensity, distance );
+  scene.add( light5 );
+
+  light6 = new THREE.PointLight( c6, intensity, distance );
+  scene.add( light6 );
+
+  var dlight = new THREE.DirectionalLight( 0xffffff, 0.1 );
+  dlight.position.set( 0.5, -1, 0 ).normalize();
+  scene.add( dlight );
+
+  var sphere = new THREE.SphereGeometry( 0.25, 16, 8 );
+
+  var l1 = new THREE.Mesh( sphere, new THREE.MeshBasicMaterial( { color: c1 } ) );
+  l1.position = light1.position;
+  scene.add( l1 );
+
+  var l2 = new THREE.Mesh( sphere, new THREE.MeshBasicMaterial( { color: c2 } ) );
+  l2.position = light2.position;
+  scene.add( l2 );
+
+  var l3 = new THREE.Mesh( sphere, new THREE.MeshBasicMaterial( { color: c3 } ) );
+  l3.position = light3.position;
+  scene.add( l3 );
+
+  var l4 = new THREE.Mesh( sphere, new THREE.MeshBasicMaterial( { color: c4 } ) );
+  l4.position = light4.position;
+  scene.add( l4 );
+
+  var l5 = new THREE.Mesh( sphere, new THREE.MeshBasicMaterial( { color: c5 } ) );
+  l5.position = light5.position;
+  scene.add( l5 );
+
+  var l6 = new THREE.Mesh( sphere, new THREE.MeshBasicMaterial( { color: c6 } ) );
+  l6.position = light6.position;
+  scene.add( l6 );
+
+  // RENDERER
+
+  renderer = new THREE.WebGLRenderer( { antialias: false } );
+  renderer.setClearColor( scene.fog.color, 1 );
+  renderer.setSize( window.innerWidth, window.innerHeight );
+
+  container.appendChild( renderer.domElement );
+
+  renderer.gammaInput = true;
+  renderer.gammaOutput = true;
+
+
+
+  //
+
+  window.addEventListener( 'resize', onWindowResize, false );
+
+}
+
+function onWindowResize() {
+
+  camera.aspect = window.innerWidth / window.innerHeight;
+  camera.updateProjectionMatrix();
+
+  renderer.setSize( window.innerWidth, window.innerHeight );
+
+  controls.handleResize();
+
+}
+
+//
+
+function animate() {
+
+  requestAnimationFrame( animate );
+
+  render();
+
+}
+
+function render() {
+
+  var time = Date.now() * 0.00025;
+  var z = 20, d = 150;
+
+  light1.position.x = Math.sin( time * 0.7 ) * d;
+  light1.position.z = Math.cos( time * 0.3 ) * d;
+
+  light2.position.x = Math.cos( time * 0.3 ) * d;
+  light2.position.z = Math.sin( time * 0.7 ) * d;
+
+  light3.position.x = Math.sin( time * 0.7 ) * d;
+  light3.position.z = Math.sin( time * 0.5 ) * d;
+
+  light4.position.x = Math.sin( time * 0.3 ) * d;
+  light4.position.z = Math.sin( time * 0.5 ) * d;
+
+  light5.position.x = Math.cos( time * 0.3 ) * d;
+  light5.position.z = Math.sin( time * 0.5 ) * d;
+
+  light6.position.x = Math.cos( time * 0.7 ) * d;
+  light6.position.z = Math.cos( time * 0.5 ) * d;
+
+  controls.update( clock.getDelta() );
+
+  renderer.render( scene, camera );
+
+}
 
 </script>
-
 </body>
 </html>
