--- a/app/intro.html
+++ b/app/intro.html
@@ -14,11 +14,11 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <!-- _build_:css styles/vendor.css -->
+  <!-- _build_:css styles/intro_vendor.css -->
   <!-- _bower_:css -->
   <!-- _endbower_ -->
   <!-- _endbuild_ -->
-  <!-- build:css(.tmp) styles/main.css -->
+  <!-- build:css(.tmp) styles/intro_main.css -->
   <link rel="stylesheet" href="bower_components/jqueryui/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
@@ -70,7 +70,7 @@
 <div id="ThreeJS"></div>
 
 
-<!-- build:js scripts/vendor.js -->
+<!-- build:js scripts/intro_vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/jquery.js"></script>
 <script src="bower_components/jqueryui/ui/minified/jquery-ui.min.js"></script>
@@ -97,7 +97,7 @@
   ga('send', 'pageview');
 </script>
 
-<!-- build:js scripts/plugins.js -->
+<!-- build:js scripts/intro_plugins.js -->
 <script type="text/javascript" src="scripts/utils/OrbitControls.js"></script>
 <script type="text/javascript" src="scripts/utils/THREEx.WindowResize.js"></script>
 <script type="text/javascript" src="scripts/utils/THREEx.FullScreen.js"></script>
@@ -108,7 +108,7 @@
 
 <!-- endbuild -->
 
-<!-- build:js(.tmp) scripts/intro.js -->
+<!-- build:js(.tmp) scripts/intro_formated.js -->
 <script src="scripts/intro_formated.js"></script>
 <!-- endbuild -->
 </body>
