--- a/app/shaders.html
+++ b/app/shaders.html
@@ -23,30 +23,146 @@
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
   <script src="bower_components/modernizr/modernizr.js"></script>
-  <script id="cubeVertexShader" type="x-shader/x-vertex">
-   uniform float time;
-   varying vec2 vUv;
 
-   void main() {
-      vUv = uv;
-      vec3 newPosition = position + normal * vec3(sin(time * 0.2) * 3.0);
-      gl_Position = projectionMatrix <i> modelViewMatrix </i> vec4(newPosition, 1.0);
-   }
+  <script id="example" type="x-shader/x-fragment">
+#ifdef GL_ES
+precision mediump float;
+#endif
 
-  </script>
-  <script id="cubeFragmentShader" type="x-shader/x-fragment">
-      uniform float time;
-      varying vec2 vUv;
+uniform float time;
+uniform vec2 resolution;
 
-      void main() {
-         vec2 position = -1.0 + 2.0 * vUv;
+mat4 rotmatrix(float a) {
+	return mat4( 	cos( a ),-sin( a ),  0.0, 0.0,
+			sin( a ), cos( a ),  0.0, 0.0,
+			0.0, 	 0.0, 	     1.0, 0.0,
+			0.0,  	 0.0,        0.0, 1.0);
+}
 
-         float red = abs(sin(position.x * position.y + time / 5.0));
-         float green = abs(sin(position.x * position.y + time / 4.0));
-         float blue = abs(sin(position.x * position.y + time / 3.0 ));
-         gl_FragColor = vec4(red, green, blue, 1.0);
-      }
-   </script>
+float light(vec2 pos, float ang)
+{
+	pos = (vec4(pos,0,0) * rotmatrix(ang)).xy;
+	pos.y -= 0.5;
+
+	float mask = 1. - (pos.x * pos.x * 60. - pos.y + 0.5);
+	float brightness = clamp(pow(0.1/(pos.y+.5),2.),0.,1.);
+
+	return mask*brightness*15.;
+}
+
+void main( void ) {
+	vec2 p = (gl_FragCoord.xy/resolution - vec2(0.5));
+
+
+	vec3 color = vec3(0.3,0.3,0.6);
+	color *= vec3(1. - p.x * p.x + p.y * p.y)/2.;
+
+	vec2 p2 = p;
+	p2.y += 0.5;
+
+
+
+
+
+	color += clamp(light(vec2(p.x-0.2,p.y + 0.5),	sin(time/2. + 1.)/2.),0.,1.);
+	color += clamp(light(vec2(p.x+0.2,p.y + 0.5),	sin(time/2. + 2.)/2.),0.,1.);
+	color += clamp(light(vec2(p.x,p.y + 0.5),	sin(time/2. + 3.)/2.),0.,1.);
+
+
+	gl_FragColor = vec4(color,1);
+}
+</script>
+
+  <script id="fragmentShader" type="x-shader/x-fragment">
+
+			#ifdef GL_ES
+			precision mediump float;
+			#endif
+
+			uniform vec2 resolution;
+			uniform sampler2D texture;
+
+			void main() {
+
+				vec2 uv = gl_FragCoord.xy / resolution.xy;
+				gl_FragColor = texture2D( texture, uv );
+
+			}
+
+		</script>
+
+  <script id="vertexShader" type="x-shader/x-vertex">
+
+			attribute vec3 position;
+
+			void main() {
+
+				gl_Position = vec4( position, 1.0 );
+
+			}
+
+		</script>
+
+  <script id="surfaceVertexShader" type="x-shader/x-vertex">
+
+			attribute vec3 position;
+			attribute vec2 surfacePosAttrib;
+			varying vec2 surfacePosition;
+
+			void main() {
+
+				surfacePosition = surfacePosAttrib;
+				gl_Position = vec4( position, 1.0 );
+
+			}
+
+		</script>
+
+  <script id="vertexShader2" type="x-shader/x-vertex">
+
+			void main()	{
+
+				gl_Position = vec4( position, 1.0 );
+
+			}
+
+		</script>
+
+  <script id="fragmentShader2" type="x-shader/x-fragment">
+
+			uniform vec2 resolution;
+			uniform float time;
+
+			void main()	{
+
+				vec2 p = -1.0 + 2.0 * gl_FragCoord.xy / resolution.xy;
+				float a = time*40.0;
+				float d,e,f,g=1.0/40.0,h,i,r,q;
+				e=400.0*(p.x*0.5+0.5);
+				f=400.0*(p.y*0.5+0.5);
+				i=200.0+sin(e*g+a/150.0)*20.0;
+				d=200.0+cos(f*g/2.0)*18.0+cos(e*g)*7.0;
+				r=sqrt(pow(i-e,2.0)+pow(d-f,2.0));
+				q=f/r;
+				e=(r*cos(q))-a/2.0;f=(r*sin(q))-a/2.0;
+				d=sin(e*g)*176.0+sin(e*g)*164.0+r;
+				h=((f+d)+a/2.0)*g;
+				i=cos(h+r*p.x/1.3)*(e+e+a)+cos(q*g*6.0)*(r+h/3.0);
+				h=sin(f*g)*144.0-sin(e*g)*212.0*p.x;
+				h=(h+(f-e)*q+sin(r-(a+h)/7.0)*10.0+i/4.0)*g;
+				i+=cos(h*2.3*sin(a/350.0-q))*184.0*sin(q-(r*4.3+a/12.0)*g)+tan(r*g+h)*184.0*cos(r*g+h);
+				i=mod(i/5.6,256.0)/64.0;
+				if(i<0.0) i+=4.0;
+				if(i>=2.0) i=4.0-i;
+				d=r/350.0;
+				d+=sin(d*d*8.0)*0.52;
+				f=(sin(a*g)+1.0)/2.0;
+				gl_FragColor=vec4(vec3(f*i/1.6,i/2.0+d/13.0,i)*d*p.x+vec3(i/1.3+d/8.0,i/2.0+d/18.0,i)*d*(1.0-p.x),1.0);
+
+			}
+
+		</script>
+
 </head>
 <body>
 <!--[if lt IE 10]>
@@ -54,7 +170,7 @@
   your browser</a> to improve your experience.</p>
 <![endif]-->
 
-
+<div id="ThreeJS"></div>
 
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
@@ -65,23 +181,6 @@
 <!-- endbower -->
 <!-- endbuild -->
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-<script>
-  (function (b, o, i, l, e, r) {
-    b.GoogleAnalyticsObject = l;
-    b[l] || (b[l] =
-        function () {
-          (b[l].q = b[l].q || []).push(arguments)
-        });
-    b[l].l = +new Date;
-    e = o.createElement(i);
-    r = o.getElementsByTagName(i)[0];
-    e.src = '//www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e, r)
-  }(window, document, 'script', 'ga'));
-  ga('create', 'UA-XXXXX-X');
-  ga('send', 'pageview');
-</script>
 
 <!-- build:js scripts/plugins.js -->
 <script src="scripts/utils/Detector.js"></script>
@@ -95,8 +194,14 @@
 <script src="scripts/utils/helvetiker_bold.typeface.js"></script>
 <!-- endbuild -->
 
-<!-- build:js scripts/main.js -->
-<script src="scripts/main.js"></script>
+
+<!--<script type="text/javascript" src="scripts/libs/lzma.js"></script>
+<script type="text/javascript" src="scripts/libs/helpers.js"></script>
+<script type="text/javascript" src="scripts/libs/codemirror.js"></script>
+<script src="scripts/shaders_test2.js"></script>-->
+
+<!-- build:js scripts/shaders_test.js -->
+<script src="scripts/shaders_test.js"></script>
 <!-- endbuild -->
 </body>
 </html>
